@@ -54,6 +54,8 @@ Trunk (unreleased changes)
 
     AVRO-188. Need to update svn ignores (massie)
 
+    AVRO-192. Improved errors for Java schema parsing problems. (cutting)
+
   OPTIMIZATIONS
 
     AVRO-172. More efficient schema processing (massie)
